force-app/main/default/objects/NEO_Variable_Association__c/NEO_Variable_Association__c.object-meta.xml
<CustomObject>
    <description>For rule engine</description>
    <label>NEO Variable Association</label>
    <nameField>
        <displayFormat>VA-{00000000}</displayFormat>
        <label>NEO Variable Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>