force-app/main/default/objects/NEO_Variable_Association__c/fields/NEO_Child_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>NEO_Child_Object_Label__c</fullName>
    <formula>NEO_Child_Object__r.Variable_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Object Label</label>
    <type>Text</type>
</CustomField>