force-app/main/default/objects/NEO_Variable_Association__c/fields/NEO_Lookup_Name__c.field-meta.xml
<CustomField>
    <fullName>NEO_Lookup_Name__c</fullName>
    <label>Lookup Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>