force-app/main/default/objects/NEO_Variable_Association__c/fields/NEO_Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>NEO_Parent_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Object</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>NEO_Variable__c.Type__c</field>
            <operation>equals</operation>
            <value>Object</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NEO_Variable__c</referenceTo>
    <relationshipLabel>NEO Variable Associations (Parent Object)</relationshipLabel>
    <relationshipName>NEO_Variable_Associations1</relationshipName>
    <type>Lookup</type>
</CustomField>