force-app/main/default/objects/NEO_Variable_Association__c/fields/NEO_Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>NEO_Parent_Object_API_Name__c</fullName>
    <formula>NEO_Parent_Object__r.Variable_API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Object API Name</label>
    <type>Text</type>
</CustomField>