force-app/main/default/objects/NEO_Variable_Association__c/fields/NEO_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>NEO_Relationship_Name__c</fullName>
    <label>Relationship Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>